--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--lang=ru контент страницы на русском-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<!--    часть блоков, которые предлагал к заданию - пропущены,-->
+<!--    плюс нет компоновки, что сильно уменьшает кол-во полезного код ревью по твоему резюме-->
+
     <div class="cv">
         <section>
             <h1>Богач Дмитрий</h1>
@@ -43,6 +47,7 @@
                     </div>
                     <div class="experience__details">
                         <ul>Прохожу курсы по Frontend:
+<!--                            внешние ссылки через target=_blank-->
                             <li><a href="https://rs.school/">rs.school</a></li>                           
                             <li><a href="https://ru.code-basics.com/">code-basics.com</a></li> 
                             <li><a href="https://www.freecodecamp.org/">freecodecamp.org</a></li>
@@ -53,6 +58,8 @@
         </section>
         <section>
             <h3>Уровень английского</h3>
+<!--            здесь и далее это не параграф, в твоём случае это dl dt dd если с семантикой-->
+<!--            и div если без семантики, параграфы нужны для статей-->
             <p>A2(Elementary)</p>
         </section>
         <section>
@@ -78,6 +85,7 @@
                     E-mail:
                  </div>
                  <div class="contact__value">
+<!--                     через href=mailto:-->
                      <a href="richman2008@mail.ru">richman2008@mail.ru</a>
                  </div>  
                 </div>
