--- a/index.html
+++ b/index.html
@@ -1,90 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резюме Богач Дмитрий</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <div class="cv">
-        <section>
-            <h1>Богач Дмитрий</h1>
-            <h2>Junior frontend developer</h2>
-        </section>
-        <section>
-            <h3>Опыт работы</h3>
-            <div class="experience">
-                <div class="experience__date">
-                    2008 - н.в.
+    <div class="container">
+   
+        <div class ="header">
+            <div class="photo">
+               <img src="assets/images/wepik.com_man.png" alt="Богач Дмитрий" />
+            </div>
+            <div class="author">
+                <div class="author__info">
+                    <h1>Богач Дмитрий</h1>
                 </div>
-                <div class="experience__description">
-                    <div class="experience__name"></div>
-                    <div class="experience__company">
-                        АО Концерн "Созвездие"
-                    </div>
-                    <div class="experience__details">
-                        <ul>Обязанности:
-                            <li>Программирование микроконтроллеров.</Li>
-                            <li>Создание программ в среде LabVIEW для проверки цифровых плат.</Li>
-                          </ul> 
-                    </div>
+                <div class="author__vacancy">
+                    <h2>Junior frontend developer</h2>
                 </div>
             </div>
-            <div class="experience">
-                <div class="experience__date">
-                    2021 - н.в.
-                </div>
-                <div class="experience__description">
-                    <div class="experience__name"></div>
-                    <div class="experience__company"> 
-                        Начал изучать Javascript.                   
-                    </div>
-                    <div class="experience__details">
-                        <ul>Прохожу курсы по Frontend:
-                            <li><a href="https://rs.school/">rs.school</a></li>                           
-                            <li><a href="https://ru.code-basics.com/">code-basics.com</a></li> 
-                            <li><a href="https://www.freecodecamp.org/">freecodecamp.org</a></li>
-                          </ul> 
-                    </div>
+        </div>
+
+        <div class="solid-line"></div>  <!-- Solid Line -->   
+
+        <section class="education">
+            <div class="education__title">
+                <h3>Образование</h3>
+            </div>
+            <div class="education__info">
+                <dl>
+                    <dt>Воронежский государственный университет </dt>
+                        <dd>специальность "Радиофизика", 2008.</dd>
+
+                </dl>
+            </div>
+        </section>
+
+        <div class="solid-line"></div>  <!-- Solid Line --> 
+
+        <section class="experience">
+            <div class="experience__title">
+                <h3>Опыт работы</h3>
+            </div>
+            <div class="experience__list">
+                <div class="experience__item">
+                    <dl>
+                        <dt>2008 - н.в.</dt>
+                            <dd>Город Воронеж, АО Концерн "Созвездие" Конструктор</dd>
+                    </dl>
                 </div>
             </div>
         </section>
-        <section>
-            <h3>Уровень английского</h3>
-            <p>A2(Elementary)</p>
-        </section>
-        <section>
-            <h3>Цели посещения курсов</h3>
-            <p>Получить востребованное направление работы</p>
-        </section>
-        <section>
-            <h3>Откуда узнал</h3>
-            <p>Телеграмм-канал при факультете</p>   
-        </section>
-        <section>
-            <h3>Контактная информация</h3>
-            <div class="contacts">
-                <div class="contact">
-                    <div class="contact__type">
-                       Github:
-                    </div>
-                    <div class="contact__value">
-                        <a href="github.com">github.com</a>
-                    </div>  
-                </div>
-                <div class="contact__type">
-                    E-mail:
-                 </div>
-                 <div class="contact__value">
-                     <a href="richman2008@mail.ru">richman2008@mail.ru</a>
-                 </div>  
-                </div>
-             </div>
 
+        <div class="solid-line"></div>  <!-- Solid Line --> 
 
+        <section class ="question">
+            <div class="question__title">
+                <h3>Общие вопросы</h3>
+            </div>
+            <div class="question__info">
+                <dl>
+                    <dt>Опыт программирования</dt>
+                        <dd>Программирование микроконтроллеров на языке С.
+                            Создание программ в среде LabVIEW для проверки цифровых плат.</dd>
+                    <dt>Прохожу курсы по Фронтенду</dt>
+                        <dd>                    
+                            <ul>
+                                <li><a href="https://rs.school/" target="_blank">rs.school</a></li>                           
+                                <li><a href="https://ru.code-basics.com/" target="_blank">code-basics.com</a></li> 
+                                <li><a href="https://www.freecodecamp.org/" target="_blank">freecodecamp.org</a></li>
+                                <li><a href="https://ru.reactjs.org/" target="_blank">react.org</a></li>
+                              </ul> 
+                        </dd>
+                    <dt>Уровень английского</dt>
+                        <dd>A2(Elementary)</dd>
+                    <dt>Цель посещения курсов</dt>
+                        <dd>Получить востребованное направление работы</dd>
+                    <dt>Откуда узнали про курс</dt>
+                        <dd>Телеграм канал при университете</dd>
+                  </dl>
+            </div>
+        </section>
 
+        <div class="solid-line"></div>  <!-- Solid Line --> 
+
+        <section class="contacts">
+            <div class="contacts__title">
+                <h3>Контактная информация</h3>
+            </div>
+            <div class="contact__list">
+                <div class="contact__value-github">
+                    <a href="https://github.com/Bogach-Dmitriy/" target="_blank">github.com</a>
+                </div>  
+                 <div class="contact__value-email">
+                     <a href="mailto:richman2008@mail.ru" target="_blank">Почта</a>
+                 </div>   
+                 <div class="contact__value-skype">
+                    <a href="skype:humorron">Skype</a>
+                </div> 
+                 <div class="contact__value-phone">
+                    <a href="tel:+79515618597">+7-951 561 85 97</a>
+                </div>  
+            </div>    
         </section>
     </div>
 </body>
